<resources>
    <string name="app_name">Archery Trainer</string>
    <string name="action_settings">Settings</string>
    <string name="MQTT_server_url">a20pmpdacgwj4.iot.eu-central-1.amazonaws.com</string>
    <string name="MQTT_topic">#</string>
    <string name="back_end_url">http://ec2-18-194-132-32.eu-central-1.compute.amazonaws.com:80</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="settings">Settings</string>
    <string name="archives">Archives</string>
    <string name="logout">Log out</string>
    <string name="id">ID</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="BowForce">Bow Force</string>
    <string name="trainerId">Trainer Id</string>
    <string name="BestResults">Best results</string>
    <string name="recording">Recording</string>
    <string name="DebugMode">Debug Mode</string>

    <string name="LeftTrapezoid">Left Trapezoid</string>
    <string name="RightTrapezoid">Right Trapezoid</string>
    <string name="LeftDeltoid">Left Deltoid</string>
    <string name="RightDeltoid">Right Deltoid</string>
    <string name="LeftTriceps">Left Triceps</string>
    <string name="RightTriceps">Right Triceps</string>

    <string name="Sensor1Muscle">Left Trapezoid</string>
    <string name="Sensor2Muscle">Right Trapezoid</string>
    <string name="Sensor3Muscle">Left Deltoid</string>
    <string name="Sensor4Muscle">Right Deltoid</string>
    <string name="Sensor5Muscle">Left Triceps</string>
    <string name="Sensor6Muscle">Right Triceps</string>


    <string name="ShowMuscleData">Show muscle data</string>
    <string name="Help">Help</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="save_hit">Save Score</string>
    <string name="hitValue">Hit Score</string>


    <string name="playRecordingLabel">Play</string>
    <string name="pauseRecordingLabel">Pause</string>
    <string name="playbackSpeed">Playback Speed</string>

    <string name="saveShotError">Unable to store shot to database</string>
    <string name="setScoreError">Unable to save score for this shot</string>
    <string name="getShotsError">No recordings found</string>

    <string name="chooseRecording">Choose a recording to view</string>
    <string name="Score">0</string>
    <string name="score">Score</string>


</resources>
