<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:visibility="visible"
    android:keepScreenOn="true">


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Recording"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkBox5"
        app:layout_constraintStart_toEndOf="@+id/chkBox4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="BEST RESULTS"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        tools:ignore="MissingConstraints" />

    <com.archery.tessa.homescreen.UI.OurView
        android:id="@+id/archerSurfaceView"
        android:layout_width="300dp"
        android:layout_height="192dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/graph" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/chkBox1"
        app:layout_constraintEnd_toStartOf="@+id/archerSurfaceView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/colorSensor1"
        android:onClick="onChkClicked"
        android:text="@string/Sensor1Muscle"
        app:layout_constraintBottom_toTopOf="@+id/chkBox2"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/colorSensor2"
        android:onClick="onChkClicked"
        android:text="@string/Sensor2Muscle"
        app:layout_constraintBottom_toTopOf="@+id/chkBox3"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/colorSensor3"
        android:onClick="onChkClicked"
        android:text="@string/Sensor3Muscle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/chkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorSensor4"
        android:onClick="onChkClicked"
        android:text="@string/Sensor4Muscle"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkBox1"
        app:layout_constraintStart_toStartOf="@+id/chkBox5" />


    <CheckBox
        android:id="@+id/chkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:buttonTint="@color/colorSensor5"
        android:onClick="onChkClicked"
        android:text="@string/Sensor5Muscle"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkBox2"
        app:layout_constraintStart_toStartOf="@+id/chkBox6" />

    <CheckBox
        android:id="@+id/chkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:buttonTint="@color/colorSensor6"
        android:onClick="onChkClicked"
        android:text="@string/Sensor6Muscle"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkBox3"
        app:layout_constraintStart_toEndOf="@+id/chkBox3" />

</android.support.constraint.ConstraintLayout>
